# swagger/swagger.yml
@@ -56,198 +56,6 @@ paths:
             $ref: '#/definitions/models.UserResponseDTO'
         "403":
           description: body is empty
-  /users/:
-    get:
-      tags:
-      - users
-      description: |-
-        get Users
-        <br>
-      operationId: UsersController.Get All
-      parameters:
-      - in: query
-        name: query
-        description: Filter. e.g. col1:v1,col2:v2 ...
-        type: string
-      - in: query
-        name: fields
-        description: Fields returned. e.g. col1,col2 ...
-        type: string
-      - in: query
-        name: sortby
-        description: Sorted-by fields. e.g. col1,col2 ...
-        type: string
-      - in: query
-        name: order
-        description: Order corresponding to each sortby field, if single value, apply
-          to all sortby fields. e.g. desc,asc ...
-        type: string
-      - in: query
-        name: limit
-        description: Limit the size of result set. Must be an integer
-        type: string
-      - in: query
-        name: offset
-        description: Start position of result set. Must be an integer
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Users'
-        "403":
-          description: ""
-  /users/{id}:
-    get:
-      tags:
-      - users
-      description: |-
-        get Users by id
-        <br>
-      operationId: UsersController.Get One
-      parameters:
-      - in: path
-        name: id
-        description: The key for staticblock
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.Users'
-        "403":
-          description: :id is empty
-    put:
-      tags:
-      - users
-      description: |-
-        update the Users
-        <br>
-      operationId: UsersController.Put
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to update
-        required: true
-        type: string
-      - in: body
-        name: body
-        description: body for Users content
-        required: true
-        schema:
-          $ref: '#/definitions/models.UpdateUserRequestDTO'
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.UserResponseDTO'
-        "403":
-          description: :id is not int
-    delete:
-      tags:
-      - users
-      description: |-
-        delete the Users
-        <br>
-      operationId: UsersController.Delete
-      parameters:
-      - in: path
-        name: id
-        description: The id you want to delete
-        required: true
-        type: string
-      responses:
-        "200":
-          description: '{string} delete success!'
-        "403":
-          description: id is empty
-  /users/{username}:
-    get:
-      tags:
-      - users
-      description: |-
-        Verify Users by username
-        <br>
-      operationId: UsersController.Verify User by username
-      parameters:
-      - in: path
-        name: username
-        description: The key for staticblock
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.UsernameDTO'
-        "403":
-          description: :username is empty
-  /users/2/sign-up:
-    post:
-      tags:
-      - users
-      description: |-
-        Sign up
-        <br>
-      operationId: UsersController.SignUp2
-      parameters:
-      - in: body
-        name: body
-        description: body for SignUp content
-        required: true
-        schema:
-          $ref: '#/definitions/models.AuthenticationDTO'
-      responses:
-        "201":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.UserResponseDTO'
-        "403":
-          description: body is empty
-  /users/resend-otp/{username}:
-    get:
-      tags:
-      - users
-      description: |-
-        Resend OTP using username
-        <br>
-      operationId: UsersController.Resend OTP
-      parameters:
-      - in: path
-        name: username
-        description: The key for staticblock
-        required: true
-        type: string
-      responses:
-        "200":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.UsernameDTO'
-        "403":
-          description: :username is empty
-  /users/sign-up:
-    post:
-      tags:
-      - users
-      description: |-
-        Sign up
-        <br>
-      operationId: UsersController.SignUp
-      parameters:
-      - in: body
-        name: body
-        description: body for SignUp content
-        required: true
-        schema:
-          $ref: '#/definitions/models.SignUpDTO'
-      responses:
-        "201":
-          description: ""
-          schema:
-            $ref: '#/definitions/models.UserResponseDTO'
-        "403":
-          description: body is empty
 definitions:
   models.AuthenticationDTO:
     title: AuthenticationDTO
@@ -357,9 +165,6 @@ definitions:
       Username:
         type: string
 tags:
-- name: users
-  description: |
-    UsersController operations for Users
 - name: auth
   description: |
     AuthenticationController operations for Authentication
